# xndr_engine

./: .gitignore  CMakeLists.txt  README.md  cppchecks.cmd  externals.cmd  externals.sh
assets/shaders/: meshlet.mesh  meshlet.task
cmake/: compiler_tests.cmake  compilers.cmake  utils.cmake
engine/: CMakeLists.txt
engine/cmake/: basisu.cmake  externals.cmake  tracy.cmake
engine/src/: CMakeLists.txt
engine/src/base/: CMakeLists.txt  base.h
engine/src/base/allocators/: allocator.h  allocators.h  linear_allocator.h  stack_allocator.h  std_allocator.h
engine/src/base/assets/: assets.h
engine/src/base/containers/: containers.h  fixed_queue.h  virtual_mem_container.h
engine/src/base/defines/: attribs.h  config.h  defines.h  errors.h
engine/src/base/devices/: device.h
engine/src/base/io/: io.h  istream.cpp  istream.h  ostream.cpp  ostream.h
engine/src/base/log/: log.h
engine/src/base/math/: bit_math.h  bound.h  math.h  matrix.h  pack_math.h  quaternion.h  rect.h  vectors.h
engine/src/base/memory/: mem_size.h  mem_utils.h  memory.h  new_delete.cpp  new_delete.h
engine/src/base/memory/arenas/: malloc_mem_arena.h  mem_arena.h  virtual_mem_arena.cpp  virtual_mem_arena.h
engine/src/base/memory/policy/: mem_copy_policy.h  mem_resize_policy.h
engine/src/base/platform/: platform.h
engine/src/base/platform/linux/: linux_platform.cpp
engine/src/base/pointers/: named_handle.h  pointers.h  ref_counter.h
engine/src/base/profiler/: profiler.h
engine/src/base/threading/: spin_lock.h  thread_utils.cpp  thread_utils.h
engine/src/base/types/: cast.h  clazz.h  constants.h  default_type.h  enums.h  fixed_string.h  hash.h  std_includes.h  string.cpp  string.h  type_id.h  type_traits.h  types.h
engine/src/base/window/: monitor.cpp  monitor.h  window.cpp  window.h
engine/src/frameworks/hid/: CMakeLists.txt  hid.cpp  hid.h
engine/src/frameworks/hid/devices/: hid_devices.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
engine/src/frameworks/rhi/: CMakeLists.txt  rhi.cpp  rhi.h  rhi_constant.h  rhi_format.cpp  rhi_format.h  rhi_types.h
engine/src/frameworks/rhi/descriptors/: bindless_descriptor_pool.cpp  bindless_descriptor_pool.h
engine/src/frameworks/rhi/driver/: command_buffer.cpp  command_buffer.h  device.cpp  device.h  driver.cpp  driver.h  queue.cpp  queue.h  resource_uploader.cpp  resource_uploader.h  swapchain.cpp  swapchain.h
engine/src/frameworks/rhi/instance/: adapter.cpp  adapter.h  instance.cpp  instance.h
engine/src/frameworks/rhi/resources/: buffer.cpp  buffer.h  buffer_view.cpp  buffer_view.h  fence.cpp  fence.h  image.cpp  image.h  image_view.cpp  image_view.h  program.cpp  program.h  resources.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  shader_reflection.cpp  shader_reflection.h
engine/src/frameworks/rhi/resources/base/: mem_resource.cpp  mem_resource.h  resource.cpp  resource.h  resource_state_tracker.cpp  resource_state_tracker.h  resource_view.h
engine/src/frameworks/rhi/states/: blend_state.h  depth_stencil_state.h  dynamic_rendering_state.h  input_assembly_state.h  raster_state.h  states.h
engine/src/frameworks/rhi/utils/: vulkan_helpers.cpp  vulkan_helpers.h
engine/src/frameworks/scripting/: CMakeLists.txt  script_engine.cpp  script_engine.h  script_module.cpp  script_module.h  scripting.cpp  scripting.h
engine/src/frameworks/threading/: CMakeLists.txt  threading.cpp  threading.h
engine/src/frameworks/threading/tasks/: async_task.cpp  async_task.h  async_task_scheduler.cpp  async_task_scheduler.h  parallel_for.h  thread_tasks.h
engine/src/systems/renderer/: CMakeLists.txt  renderer.cpp  renderer.h  renderer_types.h
engine/src/systems/renderer/pipelines/forward/: forward_pipeline.cpp  forward_pipeline.h
engine/src/systems/renderer/queue/: render_context.h  render_queue.cpp  render_queue.h
engine/src/systems/renderer/resources/material/: material.cpp  material.h
engine/src/systems/renderer/resources/mesh/: mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h
engine/src/systems/renderer/resources/model/: model.cpp  model.h  model_manager.cpp  model_manager.h
engine/src/systems/renderer/resources/texture/: texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
engine/src/systems/renderer/shader_interop/: math_interop.h  mesh_interop.h  shader_interop.h
engine/tests/: CMakeLists.txt
engine/tests/base/: CMakeLists.txt  main.cpp  unit_test_allocators.cpp  unit_test_malloc.cpp  unit_tests_common.h
engine/tests/renderer/: CMakeLists.txt  main.cpp
engine/tests/scripting/: CMakeLists.txt  main.cpp
engine/tests/shared/: unit_test_shared.h
engine/tests/threading/: CMakeLists.txt  main.cpp
engine/tools/: CMakeLists.txt
engine/tools/gltfconv/: CMakeLists.txt  main.cpp
